part1/log-output_101-103-107/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ing
spec:
  rules:
  - http:
      paths:
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: log-output-svc
            port:
              number: 2345
